--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 name: TeleportScroll
 version: 1.0
 author: Sven Johnson
-main: io.sjohnson.teleportscroll.TeleportScroll
+main: io.sjohnson.teleportscroll.Main
 api-version: 1.18
 commands:
   rename:
