Now teleporting to the correct location (x-0.5, z-0.5)

--- a/plugin.yml
+++ b/plugin.yml
@@ -16,3 +16,6 @@ commands:
   lifesaver:
     description: spawns a lifesaver
     usage: /<command> quantity
+  dev:
+    description: developer use only
+    usage: /<command>
