--- a/plugin.yml
+++ b/plugin.yml
@@ -3,6 +3,7 @@ version: 1.0
 author: Sven Johnson
 main: io.sjohnson.teleportscroll.Main
 api-version: 1.18
+depend: [NBTAPI]
 commands:
   rename:
     description: renames teleport scroll
