--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.sjohnson</groupId>
-    <artifactId>teleportscroll</artifactId>
+    <artifactId>TeleportScroll</artifactId>
     <version>2.0.0</version>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -12,10 +12,10 @@
 
     <build>
         <finalName>TeleportScroll</finalName>
-        <sourceDirectory>src</sourceDirectory>
+        <sourceDirectory>src/</sourceDirectory>
         <resources>
             <resource>
-                <directory>resources</directory>
+                <directory>resources/</directory>
                 <filtering>true</filtering>
                 <includes>
                     <include>*</include>
@@ -95,6 +95,13 @@
         <dependency>
             <groupId>javax.json</groupId>
             <artifactId>javax.json-api</artifactId>
+            <version>1.1.4</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.json</artifactId>
             <version>1.1.4</version>
             <scope>compile</scope>
         </dependency>
